# utility

./: CMakeLists.txt
include/genogrove/utility/: ranges.hpp
tests/: CMakeLists.txt  ranges-test.cpp
